--- a/template.html
+++ b/template.html
@@ -65,10 +65,9 @@ URL: https://code.google.com/p/io-2012-slides
     <article>
       <ul>
         <li>Mettre en place et configurer des services </li>
-        <li>Cela prend du temps, nécéssite des compétences <li>
-        <li>Des retards si le spécialiste est absent </li>
-        <li>Rébarbatif !! </li>
       </ul>
+    <img src="images/admin_1.jpg" class="reflect" alt="Description" title="Description">
+
     </article>
   </slide>
   <slide>
@@ -81,7 +80,8 @@ URL: https://code.google.com/p/io-2012-slides
         <li>Une sorte de recette réservée à une tache précise </li>
         <li>Une IHM intuitive <li>
         <li>Un langage puissant, facile et modulable</li>
-        <li>Aucun prérequis sauf le bash</li>
+        <li>Aucun prérequis sauf un interpréteur de commandes</li>
+
       </ul>
     </article>
   </slide>
@@ -91,7 +91,6 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
     <article>
       <ul>
-        <li>Une approche innovante!</li>
         <li>Un langage modulaire et puissant</li>
         <li>Une webapp opérationnelle et complète</li>
         <li>S'adapte et évolue avec les besoins rapidement</li>
@@ -126,7 +125,14 @@ URL: https://code.google.com/p/io-2012-slides
         <img src="images/shaker3.png" class="reflect" alt="Description" title="Description">
     </article>
   </slide>
-
+<slide class="fill nobackground" style="background-image: url(images/shaker_list.png); background-size: 100% 65%">
+    <hgroup>
+    </hgroup>
+</slide>
+<slide class="fill nobackground" style="background-image: url(images/shaker_make.png); background-size: 100% 75%">
+    <hgroup>
+    </hgroup>
+</slide>
 <slide>
     <hgroup>
       <h2>Le langage Shaker</h2>
@@ -172,6 +178,12 @@ echo "helloo"
     </article>
 
 </slide>
+<slide class="fill nobackground" style="background-image: url(images/shaker_edit.png); background-size: 100% 75%">
+    <hgroup>
+    </hgroup>
+</slide>
+
+
 <slide>
     <hgroup>
       <h2>Le langage Shaker</h2>
@@ -292,10 +304,13 @@ CONF:
     <article>
       <ul>
         <li>Lancement de taches parallèles ou séquentielles (au choix)</li>
-        <li>Flux en temps réel affiché dans la console (web app)</li>
-        <li>Éditeur integré du code Shaker (web app)</li>
-        <li>Exécution et débogage du code (web app) </li>
-        <li>Moteur de création de plugin intégré (web app)</li>
+        <li> Web app:</li>
+        <ul>
+            <li>Flux en temps réel affiché dans la console</li>
+            <li>Éditeur integré du code Shaker</li>
+            <li>Exécution et débogage du code  </li>
+            <li>Moteur de création de plugin intégré</li>
+        </ul>
       </ul>
     </article>
   </slide>
@@ -308,6 +323,8 @@ CONF:
       <ul>
         <li>Développement d'un dépôt public de plugins/modules (partage et échange)</li>
         <li>Mode multi-serveurs</li>
+        <li>Intégration d'autre mode de communication 0MQ.</li>
+        <li>Support de clients Saltstack, Puppet, Chef, ...ect</li>
         <li>Intégration avec des modules de monitoring </li> 
         <li><b>Prise de décision automatique (administration autonome)</b>  </li>
         <li>Toute idée est la bienvenue</li>
