--- a/template.html
+++ b/template.html
@@ -211,12 +211,23 @@ hostname ${env['global_var']['hostname']}
     </article>
 
 </slide>
+<slide>
+    <hgroup>
+      <h2> Le langage Shaker</h2>
+      <h3> Problématique</h3>
+    </hgroup>
+    <p>Installation d'un paquet intéractif</p>
+    <article class="flexbox vcenter ">
+        <img src="images/shaker_install_1.png" class="reflect" alt="Description" title="Description" style="margin-bottom:250px">
+        <img src="images/shaker_install_2.png" class="reflect" alt="Description" title="Description" style="margin-bottom:250px">
+    </article>
+  </slide>
 
 <slide>
     <hgroup>
       <h2>Le langage Shaker</h2>
       <h3>Les modules</h3>
-      <h4>Les modules variable et IF</h4>
+      <h4>Les modules "variable" et "IF"</h4>
     </hgroup>
     <article>
       <pre class="prettyprint" data-lang="bash (script)">
@@ -272,24 +283,39 @@ COND:
 </slide>
 <slide>
     <hgroup>
+      <h2> Le langage Shaker</h2>
+      <h3> Problématique</h3>
+    </hgroup>
+    <p>Configuration de port de switch routeur</p>
+    <article class="flexbox vcenter ">
+        <img src="images/shaker_network.png" class="reflect" alt="Description" title="Description" style="margin-bottom:150px">
+    </article>
+  </slide>
+
+
+<slide>
+    <hgroup>
       <h2>Le langage Shaker</h2>
       <h3>Les modules</h3>
       <h4>Configuration de switch/routeur</h4>
     </hgroup>
     <article>
       <pre class="prettyprint" data-lang="bash (script)">
-<b>$$ netDevice.pull CONF</b>
+<b>$$ netDevice.push CONF</b>
 </pre>
       <pre class="prettyprint" data-lang="yaml (ENV)">
 CONF:
-    user: cisco
-    password: cisco
+    user: ${argv[1]}
+    password: ${argv[2]}
     hostname: 192.168.0.100
     conf: |
-        <b>conf t
-        interface Gi1/0/24
-        description "modifie par Shaker"
-        no shutdown</b>
+        conf t
+        interface ${data['interface']}
+    % if VLAN_trunk :
+        switchport trunk encapsulation dot1q
+        switchport trunk allowed vlan ${data['vlans']}
+        switchport mode trunk
+    %endif
 </pre>
  
     </article>
